# mav_active_3d_planning

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  mav_active_3d_planning_https.rosinstall  mav_active_3d_planning_ssh.rosinstall  package.xml
active_3d_planning_app_calibration/: CMakeLists.txt  package.xml
active_3d_planning_app_calibration/cfg/experiments/: experiment_visualization.rviz
active_3d_planning_app_calibration/launch/: example.launch
active_3d_planning_app_calibration/msg/: OdometryOffset.msg
active_3d_planning_app_calibration/scripts/: testgui.py
active_3d_planning_app_example/: CMakeLists.txt  package.xml
active_3d_planning_app_example/src/: exploration_planner_node.cpp
active_3d_planning_app_example/src/experiments/: eval_plotting_node.py
active_3d_planning_app_reconstruction/: CMakeLists.txt  README.md  package.xml
active_3d_planning_app_reconstruction/cfg/: maze_airsim.yaml  maze_airsim_drift.yaml
active_3d_planning_app_reconstruction/cfg/experiments/: CityBuilding.yaml  Matterport.yaml  Maze.yaml  drift_test.rviz  experiment_visualization.rviz  glocal.rviz  test_traj_adapter.rviz
active_3d_planning_app_reconstruction/cfg/planners/: example_config.yaml  example_config_rrt_star.yaml  example_config_rrt_star_anymal.yaml  example_config_rrt_star_spot.yaml  exploration_planner.yaml  glocal.yaml  reconstruction_planner.yaml
active_3d_planning_app_reconstruction/cfg/voxblox/: transforms.yaml
active_3d_planning_app_reconstruction/launch/: core_sutd_experiment.launch  drift_test.launch  evaluate_experiment.launch  example.launch  example_gazebo.launch  reproduce_err.launch  run_experiment.launch  run_glocal.launch  sutd_experiment.launch  sutd_experiment_spot.launch  test.launch  test_traj_adapter.launch
active_3d_planning_app_reconstruction/scripts/: bounding_box_computer.py  planner_goal_pose_to_transform.py  run_experiment_series.sh  testgui.py
active_3d_planning_app_reconstruction/src/experiments/: airsim_adaptor.py  eval_data_node.py  eval_plotting_node.py  eval_voxblox_node.cpp  gps_odometry_simulator.py  test_target_publisher.py  trajectory_adapter.cpp  trajectory_adaptor.cpp
active_3d_planning_app_reconstruction/src/planner/: reconstruction_planner_node.cpp
active_3d_planning_application_example/: CMakeLists.txt  package.xml
active_3d_planning_application_example/cfg/experiments/: Maze.yaml
active_3d_planning_application_example/launch/: evaluate_experiment.launch  replay_experiment.launch
active_3d_planning_calibration/: CMakeLists.txt  package.xml
active_3d_planning_calibration/src/: calibration_planner_node.cpp
active_3d_planning_calibration/src/planner/: calibration_planner.cpp
active_3d_planning_core/: CMakeLists.txt  README.md  package.xml
active_3d_planning_core/src/data/: bounding_volume.cpp  system_constraints.cpp  trajectory_segment.cpp  visualization_markers.cpp
active_3d_planning_core/src/map/: map.cpp
active_3d_planning_core/src/module/: back_tracker.cpp  module.cpp  module_factory.cpp  module_factory_registry.cpp  trajectory_evaluator.cpp  trajectory_generator.cpp
active_3d_planning_core/src/planner/: online_planner.cpp
active_3d_planning_core/src/tools/: defaults.cpp
active_3d_planning_diffdrive/: CMakeLists.txt  package.xml
active_3d_planning_diffdrive/launch/: example_diffdrive.launch
active_3d_planning_mav/: CMakeLists.txt  README.md  package.xml
active_3d_planning_mav/src/initialization/: mav_package.cpp
active_3d_planning_mav/src/tools/: linear_mav_trajectory_generator.cpp  trajectory_adapter_node.cpp
active_3d_planning_panoptic/: CMakeLists.txt  README.md  package.xml
active_3d_planning_panoptic/src/initialization/: panoptic_package.cpp
active_3d_planning_panoptic/src/map/: single_tsdf_panoptic_map.cpp
active_3d_planning_ros/: .clang-format  CMakeLists.txt  README.md  package.xml
active_3d_planning_ros/src/: ros_planner_node.cpp
active_3d_planning_voxblox/: CMakeLists.txt  README.md  package.xml
asldoc-2018-ma-schmid/: CMakeLists.txt  package.xml
mav_active_3d_calibration/: CMakeLists.txt  package.xml
mav_active_3d_calibration/launch/: example.launch
mav_active_3d_calibration/scripts/: bounding_box_computer.py  run_experiment_series.sh
mav_active_3d_calibration/src/: mav_calibration_planner_node.cpp
mav_active_3d_planning/: CMakeLists.txt  README.md  package.xml
mav_active_3d_planning/cfg/: example_planner_config.yaml  experiment1.yaml  experiment2.yaml  experiment_visualization.rviz  full_test.rviz  simulation_visualization.rviz
mav_active_3d_planning/launch/: evaluate_experiment.launch  evaluate_simulation.launch  example.launch  example_planner_config.launch  full_test.launch  replay_experiment.launch  run_exp2_spiral.launch  run_experiment.launch  run_spiral.launch  test.launch
mav_active_3d_planning/real_test/: replay_test.launch  run_test.launch  rviz_cfg.rviz
mav_active_3d_planning/scripts/: bounding_box_computer.py  orientation_eval.py  plotting.py  run_experiment_series.sh  run_experiment_series_multi.sh  testgui.py
mav_active_3d_planning/src/: defaults.cpp  eval_plotting_node.py  module_factory.cpp  planner_node.cpp  progress_monitor.py  random_planner.cpp  random_planner.py  ray_caster.cpp  te_naive.cpp  tg_mav_trajectory_generation.cpp  tg_random_linear.cpp  tg_uniform.cpp  trajectory_evaluator.cpp  trajectory_generator.cpp  trajectory_segment.cpp
unreal_cv_ros/: CMakeLists.txt  README.md  package.xml
unreal_cv_ros/cfg/: example_full.rviz  example_test.rviz  sensor_model_config.yaml  test_launch_config_voxblox.rviz
unreal_cv_ros/content/: CommandCode.cpp  CustomPluginCode.cpp  gazebo_empty.world  uecvros_plugin_node  uecvros_plugin_node.cpp
unreal_cv_ros/launch/: example_full.launch  example_mav.launch  example_test.launch  full_routine.launch  test_pointcloud.launch
unreal_cv_ros/msg/: UeSensorRaw.msg  UeSensorRawFast.msg
unreal_cv_ros/src/: sensor_model.py  simulation_manager.py  unreal_ros_client.py
unreal_cv_ros/srv/: GetCameraParams.srv
(+525 files in other folders)
