<?xml version="1.0"?>
<package format="2">
  <name>mav_active_3d_planning</name>
  <version>0.0.0</version>
  <description>Active path planning for 3D reconstruction using voxblox.</description>

  <maintainer email="schmluk@student.ethz.ch">Lukas Schmid</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>voxblox_ros</depend>
  <depend>voxblox</depend>
  <depend>trajectory_msgs</depend>
  <depend>mav_trajectory_generation</depend>
  <depend>mav_trajectory_generation_ros</depend>
  <depend>mav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>active_calibration_comm</depend>

  <export>

  </export>
</package>
