<?xml version="1.0"?>
<package format="2">
  <name>active_3d_planning_core</name>
  <version>0.0.0</version>
  <description>Core functionality for Active path planning for 3D tasks</description>

  <maintainer email="schmluk@student.ethz.ch">Lukas Schmid</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>glog_catkin</depend>
  <depend>voxblox</depend>
</package>