<?xml version="1.0"?>
<package format="2">
  <name>active_3d_planning_ros</name>
  <version>0.0.0</version>
  <description>Ros package for active 3d planning </description>

  <maintainer email="schmluk@student.ethz.ch">Lukas Schmid</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>active_3d_planning_core</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>voxblox_ros</depend>
  <depend>voxblox</depend>
  <depend>trajectory_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
</package>
