<?xml version="1.0"?>
<package format="2">
    <name>active_3d_planning_ros</name>
    <version>0.0.0</version>
    <description>Ros package for active 3d planning</description>

    <author email="schmluk@mavt.ethz.ch">Lukas Schmid</author>

    <maintainer email="schmluk@mavt.ethz.ch">Lukas Schmid</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <depend>active_3d_planning_core</depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>trajectory_msgs</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
</package>
