<?xml version="1.0"?>
<package format="2">
  <name>mav_active_3d_planning</name>
  <version>0.0.0</version>
  <description>Active path planning for 3D reconstruction using voxblox.</description>

  <maintainer email="schmluk@student.ethz.ch">Lukas Schmid</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>rospy</depend>

  <export>

  </export>
</package>
