<?xml version="1.0"?>
<package format="2">
  <name>mav_active_3d_planning</name>
  <version>0.0.0</version>
  <description>Sampling-based Online Informative Path Planning.</description>
  
  <maintainer email="schmluk@mavt.ethz.ch">Lukas Schmid</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>active_3d_planning_core</depend>
  <depend>active_3d_planning_ros</depend>
  <depend>active_3d_planning_mav</depend>
  <depend>active_3d_planning_app_example</depend>

  <export>
    <metapackage/>
  </export>
</package>

