<?xml version="1.0"?>
<package format="2">
  <name>mav_active_3d_planning</name>
  <version>0.0.0</version>
  <description>Sampling-based Online Informative Path Planning.</description>
  
  <maintainer email="schmluk@mavt.ethz.ch">Lukas Schmid</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>active_3d_planning_core</exec_depend>
  <exec_depend>active_3d_planning_ros</exec_depend>
  <exec_depend>active_3d_planning_mav</exec_depend>
  <exec_depend>active_3d_planning_voxblox</exec_depend>
  <exec_depend>active_3d_planning_app_reconstruction</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>

