<?xml version="1.0"?>
<package format="2">
  <name>unreal_cv_ros</name>
  <version>0.0.0</version>
  <description>ROS interface to connect and stream images from an unreal engine game world, using the unrealcv api.</description>

  <maintainer email="schmluk@student.ethz.ch">Lukas Schmid</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>std_srvs</depend>

  <export>

  </export>
</package>
